data/derived/comb/progs/unify/prog4809.ml.out
Characters 122-125:
  let l = sepConcat(sep t) in
                    ^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
